--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,6 @@
     <string name="to">To</string>
     <string name="as_of">As of</string>
     <string name="amount_label">Amount:</string>
+    <string name="exchange_rate_label">Rate:</string>
 
 </resources>
