added spinner, tweaking card view a bit more

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="as_of">As of</string>
-    <string name="amount_label">Amount:</string>
+    <string name="amount_label">Amt:</string>
     <string name="exchange_rate_label">Rate:</string>
 
 </resources>
