--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,5 @@
     <string name="as_of">As of</string>
     <string name="amount_label">Amt:</string>
     <string name="exchange_rate_label">Rate:</string>
-
+    <string name="error_generic">Something went wrong.</string>
 </resources>
