--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="sgd_short">SGD</string>
     <string name="thb_short">THB</string>
     <string name="zar_short">ZAR</string>
-    <string name="isk_short">ISK</string>
+    <string name="isk_short">ISK</string><!--this one is invalid on purpose!-->
 
     <!-- Currency descriptions-->
     <string name="eur_long">Euro</string>
